Refactor index.html structure and enhance script.js for current weather data retrieval

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="module" src="script/script.js"></script>
     <title>Weather Widget Challenge 2026 1.5</title>
   </head>
   <body>
-    <script type="module" src="script/script.js"></script>
+    <div class="container">
+      <h1>Weather Widget Challenge 2026 1.5</h1>
+    </div>
   </body>
 </html>
